--- a/Accomodation.html
+++ b/Accomodation.html
@@ -1,8 +1,37 @@
 <html>
     <head>
         <h1>ACCOMODATION</h1>
+        <link rel="stylesheet" href="styles.css">
     </head>
+    <img src="pic 6.jpeg" alt="photo">
     <body>
-        <p> we offer accomodation</p>
+        <p>Bruce Resort rooms are designed to provide the highest levels
+            of comfort,convinience and efficiency,supported by the latest technology.
+            160 air conditioned rooms,of these 150 are superior rooms,3 are for gests
+            with special nees,4 junior suits an 3 ex suits.
+        </p>
+        <div class="accomodation">
+        <h1>superior rooms amenities</h1>
+        <ol>
+            <li>room size:20sq.m</li>
+            <li>LCD flat screen TV with DSTV</li>
+            <li>complimentary WI-FI hot spots</li>
+            <li>personal minibar of the room</li>
+        </ol>
+        <h1>Junior suites amenities</h1>
+        <ol>
+            <li>Room size 23sq.m</li>
+            <li>LCD flat screen TV with DSTV</li>
+            <li>complimentary WI-FI hot-spots</li>
+            <li>personal minibar in the room</li>
+        </ol>
+        <h1>Executive rooms amnities</h1>
+        <ol>
+            <li>Room size 50sq.m</li>
+            <li>complimentary WI-FI hot-spots</li>
+            <li>personal minibar in the room</li>
+            <li>Safety deposit box</li>
+        </ol>
+    </div>
     </body>
 </html>
