--- a/activities.html
+++ b/activities.html
@@ -1,9 +1,11 @@
 <html>
     <head>
-        <h1>Activities</h1>
+        
     </head>
     <body>
-    <h1>we offer the following activities</h1>
+        <link rel="stylesheet" href="styles.css">
+        <div class= activities>
+        <h1>we offer the following activities</h1>
     <ul>
         <li>Rock climbing</li>
         <li>swimming</li>
@@ -12,5 +14,12 @@
         <li>zip lining</li>
         <li>nature trail</li>
     </ul>
+      </div>
+      <div class= images2> 
+    <img src="pic 8.jpeg" alt="photo">
+    <img src="pic 9.jpeg" alt="photo">
+    <img src="pic 11.jpeg" alt="photo">
+    </div>
+
     </body>
 </html>
