--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,17 @@
 <html>
     <head>
-        <h1>Our contacts</h1>
-        
+        <link rel="stylesheet" href="styles.css">
+        <div class=contacts>
+            <h1>contact us at</h1>
+        phone +254-33434333
+              +254-00000001
+Email address-Bruceresort@yahoo.com
+      </div>
+
+<div class="image"> 
+    <img src="pic 3.jpeg" alt="photo">
+
+</div>
     </head>
+
 </html>
