--- a/pictures.html
+++ b/pictures.html
@@ -1,5 +1,12 @@
 <html>
     <head>
         <h1>Our gallery</h1>
+        <img src="pic 1.jpeg" alt="photo">
+        <img src="pic 2.jpeg" alt="photo">
+        <img src="pic 3.jpeg" alt="photo">
+        <img src="pic 4.jpeg" alt="photo">
+        <img src="pic 5.jpeg" alt="photo">
+        <img src="pic 6.jpeg" alt="photo">
+        <img src="pic 7.jpeg" alt="photo">
     </head>
 </html>
