--- a/travel arrangements.html
+++ b/travel arrangements.html
@@ -2,4 +2,34 @@
     <head>
         <h1>TRAVEL ARRANGEMENTS</h1>
     </head>
+    <body>
+        <link rel="stylesheet" href="styles.css">
+        <div class=travel> 
+        <h1>Transport based on a tour van (6-8 pax)</h1>
+        <ol>
+            <li>savage wilderness camp Ksh 13,200</li>
+        </ol>
+        <h1>Option 2:Transport based on a luxury shuttle(22 pax)</h1>
+        <ol>
+            <li>savage wilderness camp Ksh 10,400 per person</li>
+        </ol>
+        <h1>The package includes</h1>
+        <ol>
+            <li>Transport from Nairobi and back</li>
+            <li>Accomodation</li>
+            <li>meals on full board</li>
+            <li>snack</li>
+        </ol>
+        <h1>Package excludes</h1>
+        <ol>
+            <li>Zip lining</li>
+            <li>Boat riding</li>
+        </ol>
+    </div>
+    <div class= image3> 
+    <img src="pic 13.jpeg" alt="photo">
+   </div>
+
+
+    </body>
 </html>
