--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css">
-        <a href="index.html">Home</a>
-        <a href="Accomodation.html">ACCOMOODATION</a>
-        <a href="activities.html">ACTIVITIES</a>
-        <a href="travel arrangements.html">TRAVEL ARRANGEMENT</a>
-        <a href="contact.html">CONTACTS</a>
-        <a href="pictures.html">PICTURES</a>
+        <a href="index.html">Home</a><br>
+        <a href="Accomodation.html">ACCOMOODATION</a><br>
+        <a href="activities.html">ACTIVITIES</a><br>
+        <a href="travel arrangements.html">TRAVEL ARRANGEMENT</a><br>
+        <a href="contact.html">CONTACTS</a><br>
+        <a href="pictures.html">PICTURES</a><br>
+        
         <h1>BRUCE RESORT</h1>
         <body> 
             <div class="">
